--- a/Green_Day/appsettings.json
+++ b/Green_Day/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Green_DayContext": "Server=(localdb)\\mssqllocaldb;Database=Green_Day.Data;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
